--- a/src/styles/components/body/realestate/searchBar/advancedSearch/_advancedSearchRow.scss
+++ b/src/styles/components/body/realestate/searchBar/advancedSearch/_advancedSearchRow.scss
@@ -2,7 +2,7 @@
     border-bottom: 1px solid $theme-dropdown-border;
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-around;
+    justify-content: stretch;
     margin: 0 auto;
     padding: $std-size * 0.5;
     width: 90%;
