--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,3 +28,4 @@
 @import './components//body/realestate/searchBar/advancedSearch/sizePicker';
 @import './components/body/realestate/searchBar/advancedSearch/entryDate';
 @import './components/body/common/blockPicker';
+@import './components/body/realestate/searchBar/advancedSearch/text';
