--- a/src/styles/components/body/common/_rangeInput.scss
+++ b/src/styles/components/body/common/_rangeInput.scss
@@ -47,14 +47,16 @@
             margin: 0 $std-size * 0.5;
         }
     }
-    .range-input__from__has-data {
-       @extend .range-input__from;
-       color: $theme-text-darker;
-    }
+    
     .range-input__upto {
-        @extend .range-input__from
+        @extend .range-input__from;
     }  
-    .range-input__upto__has-data {
-       @extend .range-input__from__has-data
-    }
+  
+}
+.range-input__from__has-data {
+    @extend .range-input__from;
+    color: $theme-text-darker;
+ }
+ .range-input__upto__has-data {
+    @extend .range-input__from__has-data;
 }
