added clear advanced filters only button, some components adjusted to it

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -29,3 +29,5 @@
 @import './components/body/realestate/searchBar/advancedSearch/entryDate';
 @import './components/body/common/blockPicker';
 @import './components/body/realestate/searchBar/advancedSearch/text';
+@import './components/body/realestate/searchBar/advancedSearch/availableImmediately';
+@import './components/body/realestate/searchBar/advancedSearch/advancedSearchButton';
