--- a/src/styles/components/body/realestate/searchBar/_goSearch.scss
+++ b/src/styles/components/body/realestate/searchBar/_goSearch.scss
@@ -1,7 +1,7 @@
 .go-search {
     @extend .searchBar-button !optional;
     background: $theme-main-color;
-    .header {
+    .go-search__header {
         background: inherit;
         color: white;
         padding-right: $std-size * 0.5;
