--- a/src/styles/components/body/realestate/searchBar/searchFields/_roommates.scss
+++ b/src/styles/components/body/realestate/searchBar/searchFields/_roommates.scss
@@ -10,6 +10,7 @@
         padding-top: $std-size * 0.5;
         .roommates-bar {
             @extend .searchBar-input-bar !optional;
+            color: $theme-text-lighter;
             .symbol__arrow {
                 color: black;
                 font-size: $font-size-xxs;
