--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -31,3 +31,4 @@
 @import './components/body/realestate/searchBar/advancedSearch/text';
 @import './components/body/realestate/searchBar/advancedSearch/availableImmediately';
 @import './components/body/realestate/searchBar/advancedSearch/advancedSearchButton';
+@import './components/body/realestate/searchBar/advancedSearch/clearAdvancedFilters';
