--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,3 +32,4 @@
 @import './components/body/realestate/searchBar/advancedSearch/availableImmediately';
 @import './components/body/realestate/searchBar/advancedSearch/advancedSearchButton';
 @import './components/body/realestate/searchBar/advancedSearch/clearAdvancedFilters';
+@import './components/body/realestate/searchBar/advancedSearch/roommateGender';
