--- a/src/styles/components/body/realestate/_realestateBody.scss
+++ b/src/styles/components/body/realestate/_realestateBody.scss
@@ -2,7 +2,8 @@
     background: $theme-background-body;
     display: flex;
     justify-content: space-between;
-    margin-top: 8px;
+    margin-top: $std-size * 0.5;
+    padding-bottom: $std-size;
     min-height: 1200px;
     width: 100%;
     .realestate-body__content-area {
