--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -33,3 +33,4 @@
 @import './components/body/realestate/searchBar/advancedSearch/advancedSearchButton';
 @import './components/body/realestate/searchBar/advancedSearch/clearAdvancedFilters';
 @import './components/body/realestate/searchBar/advancedSearch/roommateGender';
+@import './components/footer/footer';
