--- a/src/styles/components/footer/_footer.scss
+++ b/src/styles/components/footer/_footer.scss
@@ -1,9 +1,11 @@
 .footer {
     background: $theme-footer-background;
+    padding-bottom: $std-size;
     .top-text {
         background-color: inherit;
         color: $theme-text-lighter;
-        font-size: $font-size-xs;
+        font-size: $font-size-s-xs;
+        line-height: $std-size * 1.3;
         margin: 0 $std-size * 10;
         text-align: center;
         padding: $std-size * 3 0 $std-size * 0.8;
@@ -12,24 +14,39 @@
     .social-media-links {
         background-color: inherit;
         display: flex;
+        flex-direction: row-reverse;
         justify-content: space-around;
         margin: $std-size *2 auto;
-        padding-bottom: $std-size * 2;
+        padding-bottom: $std-size * 1.5;
         width: 20%;
         .social-media-links__icon-container {
             align-items: center;
             background-color: black;
             border-radius: 35px;
+            cursor: pointer;
             display: flex;
             justify-content: center;
             padding: $std-size * 0.3;
-            height: 40px;
-            width: 40px;   
+            height: $std-size * 3;
+            width: $std-size * 3;   
             .social-media-links__icon {
                 background-color: inherit;
-                height: $std-size;
-                width: $std-size;
+                height: $std-size * 1.2;
+                width: auto;
             }     
         }
+    }
+    .copyright {
+        background-color: inherit;
+        border-bottom: 2px solid $theme-text-lighter;
+        color: $theme-text-lighter;
+        font-size: $font-size-s-xs;
+        font-weight: 500;
+        line-height: $std-size * 1.4;
+        margin: 0 auto;
+        padding-bottom: $std-size * 3;
+        text-align: center;
+        white-space: pre-wrap;
+        width: 35%;
     }
 }
