--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -34,3 +34,4 @@
 @import './components/body/realestate/searchBar/advancedSearch/clearAdvancedFilters';
 @import './components/body/realestate/searchBar/advancedSearch/roommateGender';
 @import './components/footer/footer';
+@import './components/personalPage';
