--- a/src/styles/components/body/realestate/searchBar/advancedSearch/_sizePicker.scss
+++ b/src/styles/components/body/realestate/searchBar/advancedSearch/_sizePicker.scss
@@ -1,6 +1,7 @@
 .size-picker {
     @extend .searchBar-flexbox-column !optional;
     padding: $std-size*0.6;
+    min-width: $std-size * 12;
     max-width: $std-size * 18;
     .range-picker__header {
         @extend .searchBar-avdanced-search-header !optional;
