in progress check point. working on promoted ads section

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -35,3 +35,6 @@
 @import './components/body/realestate/searchBar/advancedSearch/roommateGender';
 @import './components/footer/footer';
 @import './components/personalPage';
+@import './components/body/realestate/feed';
+@import './components/body/promotedProjects/promotedProjectsBar';
+@import './components/body/promotedProjects/promotedProject';
