--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -38,3 +38,4 @@
 @import './components/body/realestate/feed';
 @import './components/body/promotedProjects/promotedProjectsBar';
 @import './components/body/promotedProjects/promotedProject';
+@import './components/pageNotFound';
