personal context wired to personal page

--- a/src/styles/components/_personalPage.scss
+++ b/src/styles/components/_personalPage.scss
@@ -15,6 +15,9 @@
             width: 95%;
             overflow-x: hidden;
         }
+    }
+    .personal-content__top {
+        background-color: inherit;
         .personal-content__header {
             background-color: inherit;
             color: $theme-text-darker;
