--- a/src/styles/components/body/promotedProjects/_promotedProjectsBar.scss
+++ b/src/styles/components/body/promotedProjects/_promotedProjectsBar.scss
@@ -1,4 +1,5 @@
 .promoted-projects-bar {
+    background: $theme-background-body;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
