added text and property selectors

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,6 +4,7 @@
     background: $theme-background-header;
     box-sizing: border-box;
     color: $theme-text;
+    font-family: 'Rubik', sans-serif;
     white-space: nowrap;
 }
 
