feed sort and filter bar added, first component wired to context

--- a/src/styles/components/body/realestate/searchBar/advancedSearch/_advancedSearch.scss
+++ b/src/styles/components/body/realestate/searchBar/advancedSearch/_advancedSearch.scss
@@ -52,5 +52,6 @@
         box-shadow: $theme-box-shadow-searchbar;
         margin-top: $searchbar-padding;
         position: absolute;
+        z-index: 10;
     }
 }
