--- a/src/styles/components/footer/_footer.scss
+++ b/src/styles/components/footer/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
     background: $theme-footer-background;
+    direction: rtl;
     padding-bottom: $std-size;
     .top-text {
         background-color: inherit;
