--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -40,3 +40,4 @@
 @import './components/body/promotedProjects/promotedProject';
 @import './components/pageNotFound';
 @import './components/personal/inputFields';
+@import './components/body/realestate/feedSortFiltersRow';
