--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -41,3 +41,4 @@
 @import './components/pageNotFound';
 @import './components/personal/inputFields';
 @import './components/body/realestate/feedSortFiltersRow';
+@import './components/body/promotedProjects/ribbon';
