--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -6,6 +6,7 @@ $theme-dropdown-border: #ccc;
 $theme-box-border: #e7e7e7;
 $theme-box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.1);
 $theme-box-shadow-searchbar: 0 2px 6px 0 rgba(0,0,0,.1);
+$theme-box-shadow-promoted-ad:  0 0 2px 0 rgba(0,0,0,.14), 0 2px 2px 0 rgba(0,0,0,.12), 0 1px 3px 0 rgba(0,0,0,.2);
 $theme-footer-background: #363636;
 $theme-highlight-gray: #dbdbd1;
 $theme-highlight-yellow: #fdf9c5;
