--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -9,7 +9,7 @@ $theme-box-shadow-searchbar: 0 2px 6px 0 rgba(0,0,0,.1);
 $theme-box-shadow-promoted-ad:  0 0 2px 0 rgba(0,0,0,.14), 0 2px 2px 0 rgba(0,0,0,.12), 0 1px 3px 0 rgba(0,0,0,.2);
 $theme-footer-background: #363636;
 $theme-highlight-gray: #dbdbd1;
-$theme-highlight-yellow: #fdf9c5;
+$theme-feed-item: #fdf9c5;
 $theme-main-color: #ff7100;
 $theme-selected: #eeeeee;
 $theme-hovered: #f9f9f9;
