little favorites heart moved to separate component, reused in feed

--- a/src/styles/components/body/promotedProjects/_promotedProject.scss
+++ b/src/styles/components/body/promotedProjects/_promotedProject.scss
@@ -26,25 +26,11 @@
         }   
     } 
     .symbol__heart {
-        align-items: center;
-        background-color: white;
-        border-radius: 50%;
-        display: flex;        
-        font-size: $font-size-l;
-        height: $std-size * 1.8;
-        justify-content: center;        
-        position: absolute;
-        right: $std-size * 0.3;
-        text-align: center;
-        top: $std-size * 0.3;
-        width: $std-size * 1.8;
-        &:hover {
-            color: $theme-main-color;
-        }
+        @extend .favorite-heart;
     }
     .symbol__heart-full {
         @extend .symbol__heart;
-        font-size: $font-size-xs;
+        font-size: $font-size-xs !important;
        
     }
     .promoted-project__description {
