--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -43,3 +43,4 @@
 @import './components/body/promotedProjects/ribbon';
 @import './components/body/realestate/feed/feedItem';
 @import './components/body/realestate/feed/feedSortFiltersRow';
+@import './components/body/realestate/feed/favoritesHeart';
