--- a/src/styles/components/mainMenu/_addItemButton.scss
+++ b/src/styles/components/mainMenu/_addItemButton.scss
@@ -1,5 +1,6 @@
 
-.add-item-button__wrapper {
+.add-item-button__container {
+    cursor: pointer;
     display: inline-block;
     position: static;
     left: 0;
