create account wired, no restrictions yet

--- a/src/styles/components/personal/_signIn.scss
+++ b/src/styles/components/personal/_signIn.scss
@@ -14,7 +14,7 @@
         box-shadow: $theme-box-shadow;
         display: flex;
         flex-direction: row-reverse;
-        height: 62vh;
+        height: 72vh;
         justify-content: space-between;
         left: 20%;
         margin: $std-size * 3 auto;
@@ -59,6 +59,12 @@
             .sign-in__re-enter-password {
                 @extend .sign-in__username;
                 .sign-in__re-enter-password-header {
+                    @extend .sign-in__username-header;
+                }
+            }
+            .sign-in__email {
+                @extend .sign-in__username;
+                .sign-in__email-header {
                     @extend .sign-in__username-header;
                 }
             }
