added mobile field to signup, minor fixes

--- a/src/styles/components/personal/_signInSignOnForm.scss
+++ b/src/styles/components/personal/_signInSignOnForm.scss
@@ -15,7 +15,7 @@
         box-shadow: $theme-box-shadow;
         display: flex;
         flex-direction: row-reverse;
-        height: 72vh;
+        height: auto;
         justify-content: space-between;
         left: 20%;
         margin: $std-size * 3 auto;
@@ -66,6 +66,12 @@
             .sign-in__email {
                 @extend .sign-in__username;
                 .sign-in__email-header {
+                    @extend .sign-in__username-header;
+                }
+            }
+            .sign-in__mobile {
+                @extend .sign-in__username;
+                .sign-in__mobile-header {
                     @extend .sign-in__username-header;
                 }
             }
