added alert modal for inValid item details

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -45,3 +45,4 @@
 @import './components/body/realestate/feed/feedSortFiltersRow';
 @import './components/body/realestate/feed/favoritesHeart';
 @import './components/personal/signInSignOnForm';
+@import './components/personal/alertModal';
