user updated when item is removed

--- a/src/styles/components/body/realestate/feed/_feedItem.scss
+++ b/src/styles/components/body/realestate/feed/_feedItem.scss
@@ -18,6 +18,7 @@
         overflow: hidden;
         width: 15%;
         img{
+            background-color: inherit;
             border-radius: 5%;
             height: 100%;
             margin: auto 0;
