--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -46,3 +46,4 @@
 @import './components/body/realestate/feed/favoritesHeart';
 @import './components/personal/signInSignOnForm';
 @import './components/personal/alertModal';
+@import './components/body/realestate/feed/detailedView';
